Use "buildTool" from CPE as default for "scanType"

--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -282,6 +282,9 @@ spec:
           - STAGES
           - STEPS
         possibleValues: ["golang", "gradle", "maven", "mta", "npm", "pip", "yarn"]
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: buildTool
       - name: cvssSeverityLimit
         type: string
         description: "Limit of tolerable CVSS v3 score upon assessment and in consequence fails the build,
