--- a/resources/metadata/protecode.yaml
+++ b/resources/metadata/protecode.yaml
@@ -18,7 +18,7 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-        default: []
+        default: ""
       - name: failOnSevereVulnerabilities
         aliases:
           - name: protecodeFailOnSevereVulnerabilities
