--- a/resources/metadata/githubcreatepr.yaml
+++ b/resources/metadata/githubcreatepr.yaml
@@ -59,6 +59,9 @@ spec:
         aliases:
           - name: githubOrg
         description: Name of the GitHub organization.
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: github/owner
         scope:
           - PARAMETERS
           - STAGES
@@ -69,6 +72,9 @@ spec:
         aliases:
           - name: githubRepo
         description: Name of the GitHub repository.
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: github/repository
         scope:
           - PARAMETERS
           - STAGES
