--- a/resources/metadata/githubstatus.yaml
+++ b/resources/metadata/githubstatus.yaml
@@ -33,6 +33,9 @@ spec:
         mandatory: true
       - name: commitId
         description: The commitId for which the status should be set.
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: git/commitId
         scope:
           - PARAMETERS
           - STAGES
@@ -58,6 +61,9 @@ spec:
         aliases:
           - name: githubOrg
         description: Name of the GitHub organization.
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: github/owner
         scope:
           - PARAMETERS
           - STAGES
@@ -68,6 +74,9 @@ spec:
         aliases:
           - name: githubRepo
         description: Name of the GitHub repository.
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: github/repository
         scope:
           - PARAMETERS
           - STAGES
