--- a/resources/metadata/xsDeploy.yaml
+++ b/resources/metadata/xsDeploy.yaml
@@ -88,9 +88,12 @@ spec:
           - STAGES
           - STEPS
         mandatory: true
-      - name: user
+      - name: username
+        aliases:
+          - name: user
+            deprecated: true
         type: string
-        description: User
+        description: Username
         scope:
           - PARAMETERS
           - STAGES
