--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -329,6 +329,7 @@ steps:
     neoTargets: []
     enableZeroDowntimeDeployment: false
     parallelExecution: false
+    runInCurrentWorkspace: false
   newmanExecute:
     dockerImage: 'node:lts-stretch'
     failOnError: true
