--- a/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
@@ -14,7 +14,7 @@ spec:
     params:
       - name: abapAddonAssemblyKitEndpoint
         type: string
-        description: Base URL to the Addon Assembly Kit as a Service System (AAKaaS)
+        description: Base URL to the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
         - PARAMETERS
         - STAGES
