--- a/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
@@ -40,7 +40,7 @@ spec:
         type: string
         description: File name of the YAML file which describes the Product Version and corresponding Software Component Versions
         mandatory: true
-        default: .pipeline/addon.yml
+        default: addon.yml
       - name: addonDescriptor
         type: string
         description: AddonDescriptor
