--- a/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
@@ -8,12 +8,12 @@ spec:
   inputs:
     secrets:
       - name: abapAddonAssemblyKitCredentialsId
-        description: Credential stored in Jenkins for Addon Assembly Kit as a Service System (AAKaaS)
+        description: Credential stored in Jenkins for Addon Assembly Kit as a Service (AAKaaS) system
         type: jenkins
     params:
       - name: abapAddonAssemblyKitEndpoint
         type: string
-        description: Base URL to the Addon Assembly Kit as a Service System (AAKaaS)
+        description: Base URL to the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
           - PARAMETERS
           - STAGES
@@ -22,7 +22,7 @@ spec:
         mandatory: true
       - name: username
         type: string
-        description: User for the Addon Assembly Kit as a Service System (AAKaaS)
+        description: User for the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
           - PARAMETERS
           - STAGES
@@ -31,7 +31,7 @@ spec:
         secret: true
       - name: password
         type: string
-        description: Password the Addon Assembly Kit as a Service System (AAKaaS)
+        description: Password the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
           - PARAMETERS
         mandatory: true
@@ -43,7 +43,7 @@ spec:
         default: addon.yml
       - name: addonDescriptor
         type: string
-        description: AddonDescriptor
+        description: Structure in the commonPipelineEnvironment containing information about the Product Version and corresponding Software Component Versions
         mandatory: false
         scope:
           - PARAMETERS
