--- a/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckCVs.yaml
@@ -32,7 +32,7 @@ spec:
         secret: true
       - name: password
         type: string
-        description: Password the Addon Assembly Kit as a Service (AAKaaS) system
+        description: Password for the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
           - PARAMETERS
         mandatory: true
