--- a/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
@@ -31,7 +31,7 @@ spec:
         secret: true
       - name: password
         type: string
-        description: Password the Addon Assembly Kit as a Service (AAKaaS) system
+        description: Password for the Addon Assembly Kit as a Service (AAKaaS) system
         scope:
           - PARAMETERS
         mandatory: true
