--- a/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCheckPV.yaml
@@ -1,10 +1,9 @@
 metadata:
-    name: abapAddonAssemblyKitCheckCVs
-    description: This step checks the validity of Software Component Versions.
+    name: abapAddonAssemblyKitCheckPV
+    description: This step checks the validity of a Addon Product Version.
     longDescription: |
-      This steps takes a list of Software Component Versions from the addonDescriptorFileName and checks whether they exist or are a valid successor of an existing Software Component Version.
-      It resolves the dotted version string into version, support package level and patch level and writes it to the commonPipelineEnvironment.
-
+      This step checks whether the Addon Product Version in the addonDescriptorFileName does exist or is a valid successor of an existing Product Version.
+      It resolves the dotted version string into version, support package stack level and patch level and writes it to the commonPipelineEnvironment.
 spec:
   inputs:
     secrets:
@@ -42,11 +41,6 @@ spec:
         description: File name of the YAML file which describes the Product Version and corresponding Software Component Versions
         mandatory: true
         default: addon.yml
-        scope:
-          - PARAMETERS
-          - STAGES
-          - STEPS
-          - GENERAL
       - name: addonDescriptor
         type: string
         description: Structure in the commonPipelineEnvironment containing information about the Product Version and corresponding Software Component Versions
