--- a/resources/metadata/cloudFoundryDeleteSpace.yaml
+++ b/resources/metadata/cloudFoundryDeleteSpace.yaml
@@ -2,7 +2,7 @@ metadata:
   name: cloudFoundryDeleteSpace
   description: Deletes a space in Cloud Foundry
   longDescription: |
-    Deletes Cloud Foundry space in Cloud Foundry
+    Deletes a space in Cloud Foundry
     Mandatory:
     * Cloud Foundry API endpoint, Organization, Space name
 
@@ -77,8 +77,7 @@ spec:
           - GENERAL
         mandatory: true
         aliases:
-          - name: cloudFoundry/space
-      
+          - name: cloudFoundry/space    
   containers:
     - name: cf
       image: ppiper/cf-cli
