--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -135,6 +135,11 @@ spec:
         default: true
       - name: buildDescriptorFile
         type: string
+        conditions:
+          - conditionRef: strings-equal
+            params:
+              - name: buildTool
+                value: maven
         description:
           "Path to the build descriptor file addressing the module/folder
           to be scanned. Defaults are for buildTool=`maven`: `./pom.xml`, buildTool=`pip`:
@@ -143,6 +148,23 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
+        default: ./pom.xml
+      - name: buildDescriptorFile
+        type: string
+        conditions:
+          - conditionRef: strings-equal
+            params:
+              - name: buildTool
+                value: pip
+        description:
+          "Path to the build descriptor file addressing the module/folder
+          to be scanned. Defaults are for buildTool=`maven`: `./pom.xml`, buildTool=`pip`:
+          `./setup.py`."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: ./setup.py
       - name: commitId
         description: "Set the Git commit ID for identifying artifacts throughout the scan."
         resourceRef:
@@ -511,7 +533,7 @@ spec:
           - STEPS
         default: false
   containers:
-    - image: "ppiper/fortify"
+    - image: "<<please bring your own fortify image>>"
       workingDir: "/home/piper"
   outputs:
     resources:
