--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -141,7 +141,7 @@ spec:
               - name: buildTool
                 value: maven
         description:
-          "Path to the build descriptor file addressing the module/folder
+          "Path to the build descriptor file addressing the module/folder to be scanned."
           `./setup.py`."
         scope:
           - PARAMETERS
