fortifyExecuteScan: Clean and improve parameters (#2050)
* Fix PR feature

* Fix Fortify parameters

* Update resources/metadata/fortify.yaml

* Update resources/metadata/fortify.yaml

* Update resources/metadata/fortify.yaml

* Update resources/metadata/fortify.yaml

* Update resources/metadata/fortify.yaml

* Update resources/metadata/fortify.yaml

* Update descriptions

Co-authored-by: Oliver Nocon <33484802+OliverNocon@users.noreply.github.com>
Co-authored-by: OliverNocon <oliver.nocon@sap.com>

--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -135,14 +135,30 @@ spec:
         default: true
       - name: buildDescriptorFile
         type: string
-        description:
-          "Path to the build descriptor file addressing the module/folder
-          to be scanned. Defaults are for buildTool=`maven`: `./pom.xml`, buildTool=`pip`:
-          `./setup.py`."
+        conditions:
+          - conditionRef: strings-equal
+            params:
+              - name: buildTool
+                value: maven
+        description: "Path to the build descriptor file addressing the module/folder to be scanned."
         scope:
           - PARAMETERS
           - STAGES
           - STEPS
+        default: ./pom.xml
+      - name: buildDescriptorFile
+        type: string
+        conditions:
+          - conditionRef: strings-equal
+            params:
+              - name: buildTool
+                value: pip
+        description: "Path to the build descriptor file addressing the module/folder to be scanned."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: ./setup.py
       - name: commitId
         description: "Set the Git commit ID for identifying artifacts throughout the scan."
         resourceRef:
@@ -511,7 +527,7 @@ spec:
           - STEPS
         default: false
   containers:
-    - image: "ppiper/fortify"
+    - image: "<<please bring your own fortify image>>"
       workingDir: "/home/piper"
   outputs:
     resources:
