--- a/resources/metadata/cloudFoundryDeploy.yaml
+++ b/resources/metadata/cloudFoundryDeploy.yaml
@@ -7,12 +7,12 @@ spec:
   inputs:
     secrets:
       - name: cfCredentialsId
-        description: "Jenkins credentials ID containing user and password to authenticate to the Cloud Foundry API"
+        description: Jenkins 'Username with password' credentials ID containing user and password to authenticate to the Cloud Foundry API.
         type: jenkins
         aliases:
           - name: cloudFoundry/credentialsId
       - name: dockerCredentialsId
-        description: "Jenkins credentials ID containing user and password to authenticate to the Docker registry"
+        description: Jenkins 'Username with password' credentials ID containing user and password to authenticate to the Docker registry.
         type: jenkins
     params:
       - name: apiEndpoint
