--- a/resources/metadata/nexusUpload.yaml
+++ b/resources/metadata/nexusUpload.yaml
@@ -27,7 +27,7 @@ spec:
   inputs:
     secrets:
       - name: nexusCredentialsId
-        description: The technical username/password credential for accessing the nexus endpoint.
+        description: Jenkins 'Username with password' credentials ID containing the technical username/password credential for accessing the nexus endpoint.
         type: jenkins
         aliases:
           - name: nexus/credentialsId
