--- a/resources/metadata/abapAddonAssemblyKitCreateTargetVector.yaml
+++ b/resources/metadata/abapAddonAssemblyKitCreateTargetVector.yaml
@@ -1,10 +1,10 @@
 metadata:
     name: abapAddonAssemblyKitCreateTargetVector
-    description: This step creates a Target Vector for SPC
+    description: This step creates a Target Vector for software lifecycle operations
     longDescription: |
       This step takes the Product Version and the corresponding list of Software Component Versions from the addonDescriptor in the commonPipelineEnvironment.
-      With these it creates a Target Vector, which is necessary for executing the software change in ABAP Cloud Platform systems with help of the Software Provider Cockpit (SPC).
-      It describes the software state, which shall be reached in the managed ABAP Cloud Platform system.
+      With these it creates a Target Vector, which is necessary for executing software lifecylce operations in ABAP Cloud Platform systems.
+      The Target Vector describes the software state, which shall be reached in the managed ABAP Cloud Platform system.
 spec:
   inputs:
     secrets:
