--- a/resources/metadata/abapAddonAssemblyKitPublishTargetVector.yaml
+++ b/resources/metadata/abapAddonAssemblyKitPublishTargetVector.yaml
@@ -1,9 +1,9 @@
 metadata:
     name: abapAddonAssemblyKitPublishTargetVector
-    description: This step triggers the publication of the Target Vector to the Service Provider Cockpit system, specified by the Scope.
+    description: This step triggers the publication of the Target Vector according to the specified scope.
     longDescription: |
-      This step reads the Target Vector ID from the addonDescriptor in the commonPipelineEnvironment and triggers the publication of the Target Vector to the Service Provider Cockpit system.
-      With scopeTV "T" the Target Vector will be published to the test SPC and with scopeTV "P" it will be published to public SPC.
+      This step reads the Target Vector ID from the addonDescriptor in the commonPipelineEnvironment and triggers the publication of the Target Vector.
+      With targetVectorScope "T" the Target Vector will be published to the test environment and with targetVectorScope "P" it will be published to the productive environment.
 spec:
   inputs:
     secrets:
@@ -38,7 +38,7 @@ spec:
         secret: true
       - name: targetVectorScope
         type: string
-        description: Determines whether the Target Vector is published to the public SPC('P') or the test SPC('T')
+        description: Determines whether the Target Vector is published to the productive ('P') or test ('T') environment
         possibleValues:
           - T
           - P
