--- a/resources/metadata/versioning.yaml
+++ b/resources/metadata/versioning.yaml
@@ -14,7 +14,7 @@ metadata:
     ### 1. Continuous Deployment pattern with automatic versioning
 
     The team has full authority on `<major>.<minor>.<patch>` and can increase any part whenever required.
-    Nonetheless, the automatic versioning makes sure that every build will create a unique version by appending `<major>.<minor>.<patch>` with a buildversion (we use a timestamp) and optinally the commitId.
+    Nonetheless, the automatic versioning makes sure that every build will create a unique version by appending `<major>.<minor>.<patch>` with a buildversion (we use a timestamp) and optionally the commitId.
 
     In order to represent this version also in the version control system the new unique version will be pushed with a dedicated tag (`<tagPrefix><major>.<minor>.<patch><unique extension>`).
 
@@ -28,7 +28,7 @@ metadata:
 
     **This pattern is the default** behavior (`versioningType: cloud`) since this is suitable for most cloud deliveries.
 
-    It is possible to use `versioningType: cloud_noTag` which has a slighly different behavior than described above:
+    It is possible to use `versioningType: cloud_noTag` which has a slightly different behavior than described above:
 
     * The new version will NOT be written as tag into the SCM but it is only available in the corresponding CI/CD workspace
     * IMPORTANT NOTICE: Using the option `cloud_noTag` should not be picked in case you need to ensure a fully traceable path from SCM commit to your build artifact.
@@ -40,7 +40,7 @@ metadata:
 
     The version is then either manually set by the team in the course of the development process or automatically pushed to master after a successful release.
 
-    Unlike for the _Continuous Deloyment_ pattern descibed above, in this case there is no dedicated tagging required for the build process since the version is already available in the repository.
+    Unlike for the _Continuous Deloyment_ pattern described above, in this case there is no dedicated tagging required for the build process since the version is already available in the repository.
 
     Configuration of this pattern is done via `versioningType: library`.
 
