--- a/resources/metadata/gctsExecuteABAPUnitTests.yaml
+++ b/resources/metadata/gctsExecuteABAPUnitTests.yaml
@@ -47,7 +47,7 @@ spec:
         mandatory: true
       - name: host
         type: string
-        description: Specifies the protocol and host adress, including the port. Please provide in the format `<protocol>://<host>:<port>`. Supported protocols are `http` and `https`.
+        description: Specifies the protocol and host address, including the port. Please provide in the format `<protocol>://<host>:<port>`. Supported protocols are `http` and `https`.
         scope:
           - PARAMETERS
           - STAGES
@@ -55,7 +55,7 @@ spec:
         mandatory: true
       - name: client
         type: string
-        description: Specifies the client of the ABAP system to be adressed
+        description: Specifies the client of the ABAP system to be addressed
         scope:
           - PARAMETERS
           - STAGES
