--- a/resources/metadata/gctsRollback.yaml
+++ b/resources/metadata/gctsRollback.yaml
@@ -52,7 +52,7 @@ spec:
         mandatory: true
       - name: host
         type: string
-        description: Specifies the protocol and host adress, including the port. Please provide in the format '<protocol>://<host>:<port>'
+        description: Specifies the protocol and host address, including the port. Please provide in the format '<protocol>://<host>:<port>'
         scope:
           - PARAMETERS
           - STAGES
@@ -60,7 +60,7 @@ spec:
         mandatory: true
       - name: client
         type: string
-        description: Specifies the client of the ABAP system to be adressed
+        description: Specifies the client of the ABAP system to be addressed
         scope:
           - PARAMETERS
           - STAGES
