--- a/resources/metadata/abapEnvironmentPullGitRepo.yaml
+++ b/resources/metadata/abapEnvironmentPullGitRepo.yaml
@@ -53,15 +53,18 @@ spec:
           - STAGES
           - STEPS
         mandatory: false
-      - name: repositoryNamesFiles
-        type: "[]string"
-        description: Optional parameter to specify a list of .yml files that each must contain a list of Repositories (Software Components) on the SAP Cloud Platform ABAP Environment system
+      - name: repositories
+        type: string
+        description: Specifies a YAML file containing the repositories configuration
         scope:
           - GENERAL
           - PARAMETERS
           - STAGES
           - STEPS
         mandatory: false
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: abap/repositories
       - name: host
         type: string
         description: Specifies the host address of the SAP Cloud Platform ABAP Environment system
