Update stage run conditions

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -86,10 +86,10 @@ stages:
   whitesourceScan:
     onlyProductiveBranch: true
     stepConditions:
-      whitesourceScan:
+      whitesourceExecuteScan:
         configKeys:
           - 'product'
-          - 'credentialsId'
+          - 'orgAdminUserTokenCredentialsId'
   fortifyScan:
     onlyProductiveBranch: true
     stepConditions:
