--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -90,6 +90,10 @@ stages:
         configKeys:
           - 'product'
           - 'orgAdminUserTokenCredentialsId'
+      whitesourceScan:
+        configKeys:
+          - 'product'
+          - 'credentialsId'
   fortifyScan:
     onlyProductiveBranch: true
     stepConditions:
