Update containersMap, stash settings and legacy config settings

--- a/resources/com.sap.piper/pipeline/cloudSdkJavascriptStashSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkJavascriptStashSettings.yml
@@ -58,16 +58,8 @@ npmAudit:
 s4SdkQualityChecks:
   unstash: ["SOURCE", "DIST", "REPORTS"]
 
-whitesourceScan:
+security:
   unstash: ["SOURCE", "NODE_MODULES", "PACKAGE_LOCK"]
-  stashes: []
-
-checkmarxScan:
-  unstash: ["SOURCE"]
-  stashes: []
-
-detect:
-  unstash: ["SOURCE"]
   stashes: []
 
 endToEndTests:
