--- a/resources/com.sap.piper/pipeline/cloudSdkContainersMap.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkContainersMap.yml
@@ -9,6 +9,8 @@ stepMetadata:
   npmExecuteScripts: npmExecuteScripts.yaml
   npmExecuteLint: npmExecuteLint.yaml
   sonarExecuteScan: sonar.yaml
+  detectExecuteScan: detect.yaml
+  whitesourceExecuteScan: whitesource.yaml
 
 # Mapping of stages to the steps (and by extension Docker images) they use
 containerMaps:
@@ -33,8 +35,6 @@ containerMaps:
     - npmExecuteScripts
   additionalUnitTests:
     - npmExecuteScripts
-  fortifyScan:
-    - fortifyExecuteScan
   npmAudit:
     - executeNpm
   endToEndTests:
@@ -52,9 +52,10 @@ containerMaps:
     - mavenExecute
   artifactDeployment:
     - nexusUpload
-  whitesourceScan:
-    - mavenExecute
-    - executeNpm
+  security:
+    - fortifyExecuteScan
+    - detectExecuteScan
+    - whitesourceExecuteScan
   compliance:
     - sonarExecuteScan
   productionDeployment:
