--- a/resources/com.sap.piper/pipeline/cloudSdkMtaStashSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkMtaStashSettings.yml
@@ -50,12 +50,28 @@ frontendIntegrationTests:
       merge: true
       includes: "s4hana_pipeline/reports/**, **/target/site/**/jacoco.xml"
 
+checkmarxScan:
+  unstash: ["SOURCE", "TARGET"]
+  stashes: []
+
+whitesourceScan:
+  unstash: ["SOURCE", "M2", "NODE_MODULES", "PACKAGE_LOCK"]
+  stashes: []
+
 additionalTools:
   unstash: ["SOURCE", "M2", "NODE_MODULES"]
   stashes: []
 
 compliance:
   unstash: ['SOURCE', 'M2', 'NODE_MODULES', 'REPORTS', 'TARGET']
+  stashes: []
+
+fortifyScan:
+  unstash: ["SOURCE", "M2", "TARGET"]
+  stashes: []
+
+detect:
+  unstash: [ "SOURCE", "M2", "TARGET" ]
   stashes: []
 
 security:
