Apply PR comment
Co-authored-by: Stephan Aßmus <stephan.assmus@sap.com>

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -118,6 +118,7 @@ stages:
         configKeys:
           - 'product'
           - 'orgAdminUserTokenCredentialsId'
+          - 'userTokenCredentialsId'
   productionDeployment:
     onlyProductiveBranch: true
     stepConditions:
