--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -42,6 +42,10 @@ spec:
         resourceRef:
           - name: fortifyCredentialsId
             type: secret
+          - type: vaultSecret
+            paths:
+              - $(vaultBasePath)/$(vaultPipelineName)/fortify
+              - $(vaultBasePath)/__group/fortify
       - name: githubToken
         description: "GitHub personal access token as per
           https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line"
