--- a/resources/metadata/checkmarx.yaml
+++ b/resources/metadata/checkmarx.yaml
@@ -85,6 +85,10 @@ spec:
           - name: checkmarxCredentialsId
             type: secret
             param: password
+          - type: vaultSecret
+            paths:
+              - $(vaultBasePath)/$(vaultPipelineName)/checkmarx
+              - $(vaultBasePath)/__group/checkmarx
       - name: preset
         type: string
         description: The preset to use for scanning, if not set explicitly the step will attempt to look up the project's setting based on the availability of `checkmarxCredentialsId`
@@ -163,6 +167,10 @@ spec:
           - name: checkmarxCredentialsId
             type: secret
             param: username
+          - type: vaultSecret
+            paths:
+              - $(vaultBasePath)/$(vaultPipelineName)/checkmarx
+              - $(vaultBasePath)/__group/checkmarx
       - name: verifyOnly
         type: bool
         description: Whether the step shall only apply verification checks or whether it does a full scan and check cycle
