Fix conditions for whitesourceExecuteScan

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -95,8 +95,9 @@ stages:
     stepConditions:
       whitesourceExecuteScan:
         configKeys:
-          - 'product'
+          - 'productName'
           - 'orgAdminUserTokenCredentialsId'
+          - 'userTokenCredentialsId'
       whitesourceScan:
         configKeys:
           - 'product'
