make dockerUsername secret

--- a/resources/metadata/cloudFoundryDeploy.yaml
+++ b/resources/metadata/cloudFoundryDeploy.yaml
@@ -157,6 +157,7 @@ spec:
           - STAGES
           - STEPS
         mandatory: false
+        secret: true
         resourceRef:
           - name: dockerCredentialsId
             type: secret
