Fix Cloud SDK Pipeline stash settings for security stage
This change fixes the stash settings for the security stage in Cloud
SDK Pipeline. Previously, the SOURCES stash was not unstashed, thus
potentially existing extensions could not be found.

--- a/resources/com.sap.piper/pipeline/cloudSdkJavaStashSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkJavaStashSettings.yml
@@ -54,6 +54,10 @@ compliance:
   unstash: ['SOURCE', 'M2', 'REPORTS', 'TARGET', 'EXEC_FILES']
   stashes: []
 
+security:
+  unstash: ["SOURCE"]
+  stashes: []
+
 additionalUnitTests:
   unstash: ["SOURCE", "NODE_MODULES", "GENERATED_CAP_FILES"]
   stashes:
