--- a/resources/com.sap.piper/pipeline/cloudSdkMtaStashSettings.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkMtaStashSettings.yml
@@ -54,6 +54,10 @@ compliance:
   unstash: ['SOURCE', 'M2', 'NODE_MODULES', 'REPORTS', 'TARGET']
   stashes: []
 
+security:
+  unstash: ["SOURCE"]
+  stashes: []
+
 additionalUnitTests:
   unstash: ["SOURCE", "NODE_MODULES"]
   stashes:
