--- a/resources/metadata/detect.yaml
+++ b/resources/metadata/detect.yaml
@@ -34,6 +34,10 @@ spec:
         resourceRef:
           - name: detectTokenCredentialsId
             type: secret
+          - type: vaultSecret
+            paths:
+              - $(vaultBasePath)/$(vaultPipelineName)/detect
+              - $(vaultBasePath)/__group/detect
         scope:
           - PARAMETERS
           - STAGES
